apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  namespace: cloudengineers
spec:
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: tomcat
        image: azurecontaineregistry.azurecr.io/httpd:1.1
        imagePullPolicy: Always
        resources:
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: mydockerimagepullsec
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat
  namespace: cloudengineers
spec:
  selector:
    app: tomcat
  ports:
  - port: 80
    targetPort: 80
