traefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
<<<<<<< HEAD:traefik.yaml
  name: traefik
=======
  name: tomcat
>>>>>>> 73da8c4557cc772521ceb6defed214087b8f073d:apache.yaml
  namespace: cloudengineers
spec:
  selector:
    matchLabels:
<<<<<<< HEAD:traefik.yaml
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
=======
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
>>>>>>> 73da8c4557cc772521ceb6defed214087b8f073d:apache.yaml
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
<<<<<<< HEAD:traefik.yaml
      - name: traefik
=======
      - name: tomcat
>>>>>>> 73da8c4557cc772521ceb6defed214087b8f073d:apache.yaml
        image: azurecontaineregistry.azurecr.io/httpd:1.1
        imagePullPolicy: Always
        resources:
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: mydockerimagepullsec
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
<<<<<<< HEAD:traefik.yaml
  name: traefik
  namespace: cloudengineers
spec:
  selector:
    app: traefik
=======
  name: tomcat
  namespace: cloudengineers
spec:
  selector:
    app: tomcat
>>>>>>> 73da8c4557cc772521ceb6defed214087b8f073d:apache.yaml
  ports:
  - port: 8080
    targetPort: 8080
